--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "sequelize": "^6.3.5",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "jest": "^26.4.2"
